# Simple-web-APP

./: README.md
web_app/: Dockerfile  main.py  pyproject.toml
web_app/storage/: data.json
